# langchain-pymupdf4llm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE  README.md  dev.Dockerfile  docker_build_dev_env.sh  docker_run_dev_env.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
langchain_pymupdf4llm/: __init__.py  pymupdf4llm_loader.py  pymupdf4llm_parser.py
notebooks/: pymupdf4llm_loader.ipynb  pymupdf4llm_parser.ipynb
src/langchain_pymupdf4llm/: __init__.py  pymupdf4llm_loader.py  pymupdf4llm_parser.py
tests/: __init__.py
tests/examples/: .gitignore  sample_1.tex
tests/integration_tests/: test_pymupdf4llm_loader.py
tests/unit_tests/: test_pymupdf4llm_parser.py
