[project]
name = "langchain-pymupdf4llm"
version = "0.5.1"
description = "An integration package connecting PyMuPDF4LLM to LangChain"
authors = [
    {name = "Lakindu Boteju",email = "lakinduboteju@gmail.com"}
]
license = "AGPL-3.0-only"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

requires-python = "<4.0,>=3.11"

dependencies = [
    "langchain-core>=1.0.0,<2.0.0",
    "pymupdf4llm>=1.27.2.1,<1.28.0"
]

[project.urls]
repository = "https://github.com/lakinduboteju/langchain-pymupdf4llm"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"
pytest-socket = "^0.7.0"
pytest-asyncio = "^1.2.0"
langchain-tests = "^1.0.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.12"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
